/* -*- mode: protobuf; tab-width: 2; indent-tabs-mode: nil; c-basic-offset: 2 -*- */ /*
 * @(#)locatorsessioninfo.proto
 *
 * Copyright (c) 2014, 2017 Argusat Limited
 * 10 Underwood Road,  Southampton.  UK
 * All rights reserved.
 *
 * This software is the confidential and proprietary information of 
 * Argusat Limited. ("Confidential Information").  You shall not
 * disclose such Confidential Information and shall use it only in
 * accordance with the terms of the license agreement you entered into
 * with Argusat Limited.
 */ 

syntax = "proto3";

package com.argusat.gjl.locator;

option java_package = "com.argusat.gjl.service.locator";
option java_outer_classname = "LocatorSessionInfoProtoBuf";

import "location.proto";

message LocatorSessionInfo {
	
	enum SessionStatus {
		CREATED = 0;
		RUNNING = 1;
		STOPPED = 2;
	}
	
	message Participant {
		enum ParticipantStatus {
			NOTIFIED = 0;
			ACTIVE = 1;
			STOPPED = 2;
		}

		string deviceId = 1;
		ParticipantStatus participantStatus = 2;
		com.argusat.gjl.observation.Location location = 3;
		uint64 lastUpdateTimestamp = 4;
		float averageSignalStrength = 5;
	}
	
	message GnssJammer {
		com.argusat.gjl.observation.Location location = 1;
	}
	
	string sessionId = 1;
	SessionStatus sessionStatus = 2;
	repeated Participant participant = 3;
	repeated GnssJammer jammer = 4;
}


