/* -*- mode: protobuf; tab-width: 2; indent-tabs-mode: nil; c-basic-offset: 2 -*- */

/*
 * @(#)locator.proto        
 *
 * Copyright (c) 2013 - 2014, 2017 Argusat Limited
 * 10 Underwood Road,  Southampton.  UK
 * All rights reserved.
 *
 * This software is the confidential and proprietary information of 
 * Argusat Limited. ("Confidential Information").  You shall not
 * disclose such Confidential Information and shall use it only in
 * accordance with the terms of the license agreement you entered into
 * with Argusat Limited.
 */

syntax = "proto3";

package com.igrow.locator;

option java_package = "com.igrow.protobuf.locator";
option java_outer_classname = "LocatorProtoBuf";

import "location.proto";

message BeginLocatorSessionRequest {

  string deviceId = 1;
  com.igrow.observation.Location location = 2;

}

message BeginLocatorSessionResponse {

  enum ErrorCode {
    NONE = 0;
    INTERNAL_ERROR = 1;
    SESSION_ALREADY_STARTED = 2;
    INSUFFICIENT_LOCAL_CANDIDATES = 3;
  }

  ErrorCode responseCode = 1;
  string responseMessage = 2;
  string sessionId = 3;
  
}

message JoinLocatorSessionRequest {

  string deviceId = 1;
  
}

message JoinLocatorSessionResponse {

  enum ErrorCode {
    NONE = 0;
    INTERNAL_ERROR = 1;
    SESSION_INVALID = 2;
  }

  ErrorCode responseCode = 1;
  string responseMessage = 2;


}


message EndLocatorSessionRequest {

  string deviceId = 1;

  
}

message EndLocatorSessionResponse {

  enum ErrorCode {
    NONE = 0;
    INTERNAL_ERROR = 1;
    SESSION_INVALID = 2;
  }

  ErrorCode responseCode = 1;
  string responseMessage = 2;
  
}
